Fix for active state on ios Fix for dropdowns in button groups on ios Fix for fixed width modals on ios

--- a/app/assets/stylesheets/layouts/_base.scss
+++ b/app/assets/stylesheets/layouts/_base.scss
@@ -1,5 +1,6 @@
 html {
   background-color: #ABCEE1;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 body {
